--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-"start": "node index.js"
+"scripts": {
+"start": "node index.js",
+"postinstall": "node node_modules/puppeteer/install.js"
 },
   "keywords": [],
   "author": "",
