--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
 "scripts": {
-"start": "node index.js",
-"postinstall": "node node_modules/puppeteer/install.js"
+"start": "node index.js"
+
 },
-  "keywords": [],
+  "keywords": [], 
   "author": "",
   "license": "ISC",
   "dependencies": {
