--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
 "scripts": {
-"start": "node index.js",
-  "build": "vite build"
+"start": "node index.js"
+
 },
   "keywords": [], 
   "author": "",
