Improve Puppeteer launch options and add browser install scripts
Added custom launch options for Puppeteer to enhance compatibility and stability in production environments. Updated error handling for PDF endpoints to include error messages. Modified package.json to install Chrome browser automatically after install and during build.

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- "scripts": { 
-  "start": "node index.js",
-  "dev": "nodemon index.js",
-  "build": "echo 'Build complete - Node.js backend ready'"
-},
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "npx puppeteer browsers install chrome",
+    "postinstall": "npx puppeteer browsers install chrome"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
