--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "npx puppeteer browsers install chrome",
-    "postinstall": "npx puppeteer browsers install chrome"
-  },
+ "scripts": { 
+  "start": "node index.js",
+  "dev": "nodemon index.js",
+  "build": "echo 'Build complete - Node.js backend ready'"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
