Update backend URL and Dockerfile user setup
Changed the frontend BACKEND constant to use the new backend deployment URL. Updated Dockerfile to remove redundant user creation since pptruser already exists in the base image, simplifying user permissions setup.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,9 +17,8 @@ RUN npm ci --only=production && npm cache clean --force
 # Copy the rest of the application code
 COPY . .
 
-# Create a non-root user (required for Puppeteer security)
-RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
-    && mkdir -p /home/pptruser/Downloads \
+# The pptruser already exists in the base image, just set permissions
+RUN mkdir -p /home/pptruser/Downloads \
     && chown -R pptruser:pptruser /home/pptruser \
     && chown -R pptruser:pptruser /usr/src/app
 
